--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "lint:fix": "eslint --max-warnings 0 --fix ."
   },
   "dependencies": {
+    "@fizzui/styles": "^0.0.5",
+    "@fontsource-variable/inter": "^5.0.20",
+    "@fontsource-variable/jetbrains-mono": "^5.0.21",
+    "@udecode/plate-common": "^36.3.7",
+    "@vanilla-extract/css": "^1.15.3",
+    "@vanilla-extract/recipes": "^0.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -20,6 +26,7 @@
     "@types/node": "^20.14.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vanilla-extract/vite-plugin": "^4.0.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^4.6.2",
