--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@udecode/plate-common": "^36.3.7",
     "@udecode/plate-paragraph": "^36.0.0",
+    "@udecode/plate-serializer-html": "^36.0.0",
     "@vanilla-extract/css": "^1.15.3",
     "@vanilla-extract/recipes": "^0.5.3",
+    "marked": "^14.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slate-react": "^0.108.0"
