--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fizzui/styles": "^0.0.5",
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
+    "@udecode/cn": "^33.0.0",
     "@udecode/plate-common": "^36.3.7",
+    "@udecode/plate-heading": "^36.0.12",
     "@udecode/plate-paragraph": "^36.0.0",
     "@udecode/plate-serializer-html": "^36.0.0",
     "@vanilla-extract/css": "^1.15.3",
