--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@udecode/cn": "^33.0.0",
     "@udecode/plate-basic-marks": "^36.0.0",
+    "@udecode/plate-block-quote": "^36.0.0",
     "@udecode/plate-common": "^36.3.7",
     "@udecode/plate-heading": "^36.0.12",
     "@udecode/plate-paragraph": "^36.0.0",
