--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@udecode/plate-block-quote": "^36.0.0",
     "@udecode/plate-common": "^36.3.7",
     "@udecode/plate-heading": "^36.0.12",
+    "@udecode/plate-list": "^36.0.0",
     "@udecode/plate-paragraph": "^36.0.0",
     "@udecode/plate-serializer-html": "^36.0.0",
     "@vanilla-extract/css": "^1.15.3",
