--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@udecode/plate-common": "^36.3.7",
     "@udecode/plate-heading": "^36.0.12",
     "@udecode/plate-horizontal-rule": "^36.0.0",
+    "@udecode/plate-link": "^36.3.8",
     "@udecode/plate-list": "^36.0.0",
     "@udecode/plate-paragraph": "^36.0.0",
     "@udecode/plate-serializer-html": "^36.0.0",
