--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@udecode/plate-media": "^36.2.2",
     "@udecode/plate-paragraph": "^36.0.0",
     "@udecode/plate-serializer-html": "^36.0.0",
+    "@udecode/plate-table": "^36.3.8",
     "@vanilla-extract/css": "^1.15.3",
     "@vanilla-extract/recipes": "^0.5.3",
     "marked": "^14.0.0",
