--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@udecode/cn": "^33.0.0",
     "@udecode/plate-basic-marks": "^36.0.0",
     "@udecode/plate-block-quote": "^36.0.0",
+    "@udecode/plate-code-block": "^36.0.0",
     "@udecode/plate-common": "^36.3.7",
     "@udecode/plate-heading": "^36.0.12",
     "@udecode/plate-horizontal-rule": "^36.0.0",
@@ -29,6 +30,7 @@
     "@vanilla-extract/css": "^1.15.3",
     "@vanilla-extract/recipes": "^0.5.3",
     "marked": "^14.0.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slate-react": "^0.108.0"
@@ -37,6 +39,7 @@
     "@antfu/eslint-config": "^2.25.1",
     "@eslint-react/eslint-plugin": "^1.10.1",
     "@types/node": "^20.14.15",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vanilla-extract/vite-plugin": "^4.0.13",
