--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "remark-stringify": "^11.0.0",
+    "remark-supersub": "^1.0.0",
     "slate-react": "^0.108.0",
     "unified": "^11.0.5"
   },
