--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@tabler/icons-react": "^3.12.0",
     "@udecode/cn": "^33.0.0",
+    "@udecode/plate-alignment": "^36.0.11",
     "@udecode/plate-basic-marks": "^36.0.0",
     "@udecode/plate-block-quote": "^36.0.0",
     "@udecode/plate-code-block": "^36.0.0",
@@ -35,6 +36,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-flexible-markers": "^1.2.1",
