--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "remark-stringify": "^11.0.0",
     "remark-supersub": "^1.0.0",
     "slate-react": "^0.108.0",
+    "ts-pattern": "^5.3.1",
     "unified": "^11.0.5"
   },
   "devDependencies": {
