--- a/package.json
+++ b/package.json
@@ -1,19 +1,64 @@
 {
   "name": "noeditor",
   "type": "module",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.2",
+  "author": {
+    "name": "dinwwwh",
+    "email": "dinwwwh@gmail.com",
+    "url": "https://dinwwwh.com"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/dinwwwh/fizzui",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dinwwwh/fizzui.git",
+    "directory": "."
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "dinwwwh",
+    "noeditor",
+    "notion like editor",
+    "react editor",
+    "slate editor",
+    "plate editor",
+    "slate react",
+    "notion editor",
+    "notion like editor",
+    "react notion editor",
+    "react notion like editor",
+    "react slate editor",
+    "react slate react editor",
+    "slate react editor"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./css": "./dist/style.css"
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview",
+    "type:check": "tsc --noEmit",
     "lint:check": "eslint --max-warnings 0 .",
     "lint:fix": "eslint --max-warnings 0 --fix ."
   },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "dependencies": {
     "@fizzui/styles": "^0.0.5",
-    "@fontsource-variable/inter": "^5.0.20",
-    "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@tabler/icons-react": "^3.12.0",
     "@udecode/cn": "^33.0.0",
@@ -34,23 +79,14 @@
     "@vanilla-extract/css": "^1.15.3",
     "@vanilla-extract/recipes": "^0.5.3",
     "prismjs": "^1.29.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rehype-stringify": "^10.0.0",
-    "remark": "^15.0.1",
-    "remark-flexible-markers": "^1.2.1",
-    "remark-gfm": "^4.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
-    "remark-stringify": "^11.0.0",
-    "remark-supersub": "^1.0.0",
     "slate-react": "^0.108.0",
-    "ts-pattern": "^5.3.1",
-    "unified": "^11.0.5"
+    "ts-pattern": "^5.3.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.25.1",
     "@eslint-react/eslint-plugin": "^1.10.1",
+    "@fontsource-variable/inter": "^5.0.20",
+    "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@types/node": "^20.14.15",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
@@ -60,7 +96,17 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-flexible-markers": "^1.2.1",
+    "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "remark-stringify": "^11.0.0",
+    "remark-supersub": "^1.0.0",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "unified": "^11.0.5",
+    "vite": "^5.4.0",
+    "vite-plugin-dts": "^4.0.3"
   }
 }
