--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -14,25 +14,16 @@
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@noeditor/editor": "workspace:^",
+    "@noeditor/utils": "workspace:^",
     "@udecode/plate-common": "^36.3.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rehype-stringify": "^10.0.0",
-    "remark": "^15.0.1",
-    "remark-flexible-markers": "^1.2.1",
-    "remark-gfm": "^4.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
-    "remark-stringify": "^11.0.0",
-    "remark-supersub": "^1.0.0",
-    "unified": "^11.0.5"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vanilla-extract/vite-plugin": "^4.0.13",
     "@vitejs/plugin-react": "^4.3.1",
-    "globals": "^15.9.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.1"
   }
