--- a/packages/utils/.gitignore
+++ b/packages/utils/.gitignore
@@ -1,25 +1,23 @@
-# Logs
-logs
+# Hidden folders and files
+.*
+!.gitignore
+!.*.example
+
+# Common generated folders
+logs/
+node_modules/
+out/
+dist/
+dist-ssr/
+build/
+coverage/
+
+# Common generated files
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+*.log.*
+*.tsbuildinfo
 vite.config.ts.timestamp-*
+
+# Common manual ignore files
+*.local
+*.pem
