--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@noeditor/utils",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "author": {
     "name": "dinwwwh",
     "email": "dinwwwh@gmail.com",
@@ -38,7 +38,8 @@
       "types": "./dist/src/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
-    }
+    },
+    "./*": "./dist/*"
   },
   "files": [
     "dist",
@@ -47,10 +48,18 @@
   "scripts": {
     "build": "vite build",
     "type:check": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run",
+    "send-test-email": "vite-node scripts/send-test-email.ts"
   },
   "dependencies": {
+    "@fizzui/styles": "^0.0.5",
+    "@noeditor/editor": "workspace:^",
+    "@react-email/preview": "^0.0.11",
     "@udecode/plate-common": "^36.3.7",
+    "gray-matter": "^4.0.3",
+    "juice": "^11.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-flexible-markers": "^1.2.1",
@@ -59,11 +68,21 @@
     "remark-rehype": "^11.1.0",
     "remark-stringify": "^11.0.0",
     "remark-supersub": "^1.0.0",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@dinwwwh/tsconfig": "latest",
+    "@types/jsdom": "^21.1.7",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "jsdom": "^24.1.1",
+    "nodemailer": "^6.9.14",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
-    "vite-plugin-dts": "^4.0.3"
+    "vite-node": "^2.0.5",
+    "vite-plugin-dts": "^4.0.3",
+    "vite-tsconfig-paths": "latest"
   }
 }
