--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -77,12 +77,22 @@
     "@vanilla-extract/css": "^1.15.3",
     "@vanilla-extract/recipes": "^0.5.3",
     "prismjs": "^1.29.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-flexible-markers": "^1.2.1",
+    "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "remark-supersub": "^1.0.0",
     "slate-react": "^0.108.0",
-    "ts-pattern": "^5.3.1"
+    "ts-pattern": "^5.3.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
+    "@dinwwwh/tsconfig": "^0.0.2",
+    "@fontsource-variable/inter": "^5.0.20",
+    "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@types/prismjs": "^1.26.4",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@vanilla-extract/vite-plugin": "^4.0.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
