--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -72,7 +72,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@dinwwwh/tsconfig": "latest",
+    "@dinwwwh/tsconfig": "^0.0.3",
     "@types/jsdom": "^21.1.7",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.4",
