--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "turbo dev",
-    "build": "turbo build",
-    "preview": "turbo preview",
-    "type:check": "turbo type:check",
-    "test": "turbo test",
+    "dev:editor": "pnpm run --filter=./packages/editor dev",
+    "build": "pnpm run -r build",
+    "preview": "pnpm run --parallel preview",
+    "type:check": "pnpm run -r type:check",
+    "test": "pnpm run -r test",
     "lint:check": "eslint --max-warnings 0 .",
     "lint:fix": "eslint --max-warnings 0 --fix ."
   },
@@ -20,7 +20,6 @@
     "@eslint-react/eslint-plugin": "^1.5.21",
     "eslint": "^9.5.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-9c6806964f-20240703",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "turbo": "latest"
+    "eslint-plugin-react-refresh": "^0.4.7"
   }
 }
