--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "extends": "@dinwwwh/tsconfig/react-lib.json",
-  "compilerOptions": {
-    "paths": {
-      "@editor/*": ["./src/*"]
-    },
-    "types": ["vite/client"]
-  },
-  "include": ["src", "tests", "scripts", "playground"]
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ],
+  "files": []
 }
