--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -47,7 +47,7 @@
   ],
   "scripts": {
     "build": "vite build",
-    "type:check": "tsc --noEmit",
+    "type:check": "tsc -b",
     "test": "vitest run",
     "send-test-email": "vite-node scripts/send-test-email.ts"
   },
@@ -72,17 +72,18 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@dinwwwh/tsconfig": "^0.0.3",
+    "@dinwwwh/tsconfig": "^0.0.5",
     "@types/jsdom": "^21.1.7",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "jsdom": "^24.1.1",
     "nodemailer": "^6.9.14",
     "typescript": "^5.5.4",
-    "vite": "^5.4.1",
+    "vite": "^5.4.3",
     "vite-node": "^2.0.5",
-    "vite-plugin-dts": "^4.0.3",
+    "vite-plugin-dts": "^4.1.0",
     "vite-tsconfig-paths": "latest"
   }
 }
